fix page shift with scrollbar

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,19 @@
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 .App {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  width: 100%;
+}
+
+.App-column {
+  flex-direction: column;
+  width: 98%;
 }
 
 .App-logo {
