--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,6 +6,7 @@
   border: 1px solid #b94a4f;
   position: -webkit-sticky; /* Safari */
   position: sticky;
+  width: 100%;
   top: 0;
 }
 
